make Grandbot play synths

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-lib_deps = wayoda/LedControl@^1.0.6
+lib_deps = 
+	wayoda/LedControl@^1.0.6
+	fortyseveneffects/MIDI Library@^5.0.2
