--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
-platform = atmelavr
-board = nanoatmega328new
+; // uncomment for #NANO
+; [env:nanoatmega328new]
+; platform = atmelavr
+; board = nanoatmega328new
+
+; uncomment for #NANO_EVERY
+[env:nano_every]
+platform = atmelmegaavr
+board = nano_every
+
 framework = arduino
 lib_deps = 
 	wayoda/LedControl@^1.0.6
