--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; // uncomment for #NANO
+; uncomment for #NANO
 ; [env:nanoatmega328new]
 ; platform = atmelavr
 ; board = nanoatmega328new
